<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeAppPractica16"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/redead"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeTextApp"
            android:text="@string/desc_read"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/sekiro"
            tools:ignore="MissingConstraints" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeTextApp"
            android:text="@string/desc_sekiro"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/gears"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeTextApp"
            android:text="@string/desc_gears"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/fallout"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeTextApp"
            android:text="@string/desc_fallout"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ori"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeTextApp"
            android:text="@string/desc_ori"/>

    </LinearLayout>



</ScrollView>